# yew-datepicker

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  releaserc.json
.github/workflows/: .releaserc.json  main.yml  pipe.yaml  release.yml
src/: lib.rs  styles.css
src/templates/: default.html
