[package]
name = "yew-datepicker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.31"}
chronoutil = "0.2.6"
yew = {version = "0.21.0", features = ["csr"]}
calendarize = {version = "1.1.0"}